@@ -322,6 +322,9 @@ class joomlaInstallerScript
 			'/libraries/joomla/filter/filterinput.php',
 			'/libraries/joomla/filter/filteroutput.php',
 			'/libraries/joomla/form/fields/templatestyle.php',
+			'/libraries/joomla/form/fields/user.php',
+			'/libraries/joomla/form/fields/menu.php',
+			'/libraries/joomla/form/fields/helpsite.php',
 			'/libraries/joomla/form/formfield.php',
 			'/libraries/joomla/form/formrule.php',
 			'/libraries/joomla/utilities/garbagecron.txt',
