@@ -26,6 +26,12 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+01-June-2012 Jean-Marie Simonet
+ # [#28589] *ACL regression in com_search
+ # [#28588] *ACL regression in com_messages
+ # [#28587] *ACL regression in com_redirect
+ # [#28579] Fix xreference regression from 1.7 to 2.5. Thanks Andrea.
+ 
 30-May-2012 Jean-Marie Simonet
  $ Missing language string
  $ Updating installation ini files: et-EE, mn-MN
